
Version: V0.1B101 Date: Thu Dec 02 22:32:22 2004 +++++++++++++++++++++++++++++++
+ First working experiments with associative parametric modeling

Version: V0.1B102 Date: Mon Dec 06 02:15:33 2004 +++++++++++++++++++++++++++++++
+ Redesign of undo/redo framework
+ Redesign of the customize pages framework
+ Simplified impl. of the General and Editor preference pages

Version: V0.1B103 Date: Wed Dec 08 14:33:04 2004 +++++++++++++++++++++++++++++++
+ RFE 1080561 (keeping standard toolbars) implemented
+ RFE 1080558 (Return in Macro Dialog) implemented
+ RFE 1078375 (Report view enhancement) implemented
+ Import of STEP and IGES files

Version: V0.1B104 Date: Tue Dec 21 22:15:28 2004 +++++++++++++++++++++++++++++++
+ Bug 1078371 fixed (crash of property editor)

Version: V0.1B105 Date: Mon Jan 03 16:06:30 2005 +++++++++++++++++++++++++++++++
+ RFE 1076842 implemented (overlong MDi tabs)
+ Bug 1076836 fixed (Focus problem with MDI)
+ Redesign of PrefWidget & WindowParameter
+ ProgressBar shows remaining time
+ Bug fixed in removing groups from parameters
+ Update Commands tab in Customize dialog after creating any macro commands
+ Allow to modify existing macro commands
+ FileIconProvider class improved
+ PyResource class improved
+ updated README.Linux
+ clear out Action.cpp/h
+ use QCString instead of QString for all prefPath and prefEntry properties.
  This is because of i18n
+ Translator class added
+ .ts files updated
+ Change language on the fly

Version: V0.1B106 Date: Mon Jan 10 11:16:24 2005 +++++++++++++++++++++++++++++++
+ fixed Bug 1099103 by fixing HasGroup in ParameterPy

Version: V0.1B107 Date: Tue Jan 11 11:16:46 2005 +++++++++++++++++++++++++++++++
+ put Application and Document (and helper classes) in namespace App
+ put exception handling into ParameterPy wrapper
+ PIMPLE document in class and py class
+ put the whole document python methodes with the macros and exceptions
+ removing doctype and put Feature handling into the document